# tg-chatbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  bing.py  bot.py  chatgpt.py
